--- a/previsaodotempo.html
+++ b/previsaodotempo.html
@@ -25,7 +25,7 @@
         <div class="caixa-media">
             <h2 class="city">Cidade</h2>
             <div class="container">
-                <p class="bsb">Horário de local</p>
+                <p class="bsb">Horário local</p>
                 <div class="relogio"></div>
               </div>
             <br>
